--- a/style.css
+++ b/style.css
@@ -14,16 +14,20 @@ body {
 
 form {
     margin-top: 20px;
-    background-color: #fff;
+    background-color: #222222;
+    color: #fff;
     width: 40%;
     height: 55px;
     display: flex;
+    border-radius: 10px;
 }
 
 form input {
     flex: 1;
     border: none;
     outline: none;
+    background-color: #222222;
+    color: #fff;
 }
 
 form .searchBtn {
