--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 form {
     margin-top: 20px;
     background-color: #222222;
-    color: #fff;
+    color: #ffffff;
     width: 40%;
     height: 55px;
     display: flex;
